<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    

	<item android:id="@+id/action_bar_start"
        android:showAsAction="ifRoom"
        android:title="@string/start"/>
	
	<item android:id="@+id/action_bar_stop"
        android:showAsAction="ifRoom"
        android:title="@string/stop"/>

	<item android:id="@+id/action_bar_remove_location"
        android:showAsAction="ifRoom"
        android:title="@string/remove"/>	

        <item android:id="@+id/action_bar_clear_locations"
        android:showAsAction="ifRoom"
        android:title="@string/clear"/>	
    
        <item android:id="@+id/action_bar_pan_camera"
        android:showAsAction="ifRoom"
        android:title="@string/pancamera"/>	

		<item android:id="@+id/action_bar_toggle_style"
        android:showAsAction="ifRoom"
        android:title="@string/toggle_style"/>			
</menu>
