<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
		<item android:id="@+id/action_bar_start_animation"
        android:showAsAction="ifRoom"
        android:title="@string/start_animation"/>			
							
		<item android:id="@+id/action_bar_stop_animation"
        android:showAsAction="ifRoom"
        android:title="@string/stop_animation"/>			
		
        <item android:id="@+id/action_bar_clear_locations"
        android:showAsAction="ifRoom"
        android:title="@string/clear_markers"/>	
    
        <item android:id="@+id/action_bar_add_default_locations"
        android:showAsAction="ifRoom"
        android:title="@string/add_default_locations"/>	
        
		<item android:id="@+id/action_bar_toggle_style"
        android:showAsAction="ifRoom"
        android:title="@string/toggle_style"/>
		
</menu>
